@@ -14,12 +14,12 @@ import mezz.jei.api.registration.IRecipeCatalystRegistration;
 import mezz.jei.api.registration.IRecipeCategoryRegistration;
 import mezz.jei.api.registration.IRecipeRegistration;
 import net.minecraft.client.Minecraft;
+import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.level.block.entity.FurnaceBlockEntity;
-import net.minecraftforge.registries.ForgeRegistries;
-import net.minecraftforge.registries.RegistryObject;
+import net.neoforged.neoforge.registries.DeferredHolder;
 
 import java.util.Arrays;
 import java.util.Collection;
@@ -41,15 +41,15 @@ public class JEIModPlugin implements IModPlugin {
         registry.addRecipeCategories(this.rollerCategory = new RollerCategory(registry.getJeiHelpers().getGuiHelper()));
         registry.addRecipeCategories(this.riceCookerCategory = new RiceCookerCategory(registry.getJeiHelpers().getGuiHelper()));
         registry.addRecipeCategories(this.fermentationBarrelCategory = new FermentationBarrelCategory(registry.getJeiHelpers().getGuiHelper()));
-        FUELS = ForgeRegistries.ITEMS.getValues().stream().filter(item -> FurnaceBlockEntity.isFuel(new ItemStack(item))).map(item -> new ItemStack(item)).collect(Collectors.toList());
+        FUELS = BuiltInRegistries.ITEM.stream().filter(item -> FurnaceBlockEntity.isFuel(new ItemStack(item))).map(ItemStack::new).collect(Collectors.toList());
     }
 
     @Override
     public void registerRecipes(IRecipeRegistration registration) {
-        registration.addRecipes(SushiRecipeTypes.RICE_COOKER, Arrays.asList(new RiceCookerCategory.RiceCookerRecipe()));
-        registration.addRecipes(SushiRecipeTypes.CUTTING_BOARD, RecipeUtil.getRecipes(Minecraft.getInstance().level, (RecipeType<CuttingBoardRecipe>)SushiContent.RecipeTypes.CUTTING_BOARD.get()));
-        registration.addRecipes(SushiRecipeTypes.ROLLER, FoodHelper.REGISTERED.values().stream().flatMap(Collection::stream).map(RegistryObject::get).map(item -> (FoodItem) item).map(RollerCategory.Recipe::new).collect(Collectors.toList()));
-        registration.addRecipes(SushiRecipeTypes.FERMENTING_BARREL, RecipeUtil.getRecipes(Minecraft.getInstance().level, (RecipeType<FermentingBarrelRecipe>)SushiContent.RecipeTypes.FERMENTING_BARREL.get()));
+        registration.addRecipes(SushiRecipeTypes.RICE_COOKER, List.of(new RiceCookerCategory.RiceCookerRecipe()));
+        registration.addRecipes(SushiRecipeTypes.CUTTING_BOARD, RecipeUtil.getRecipes(Minecraft.getInstance().level, (RecipeType<CuttingBoardRecipe>) SushiContent.RecipeTypes.CUTTING_BOARD.get()));
+        registration.addRecipes(SushiRecipeTypes.ROLLER, FoodHelper.REGISTERED.values().stream().flatMap(Collection::stream).map(DeferredHolder::get).map(item -> (FoodItem) item).map(RollerCategory.Recipe::new).collect(Collectors.toList()));
+        registration.addRecipes(SushiRecipeTypes.FERMENTING_BARREL, RecipeUtil.getRecipes(Minecraft.getInstance().level, (RecipeType<FermentingBarrelRecipe>) SushiContent.RecipeTypes.FERMENTING_BARREL.get()));
     }
 
     @Override
@@ -62,6 +62,6 @@ public class JEIModPlugin implements IModPlugin {
 
     @Override
     public ResourceLocation getPluginUid() {
-        return new ResourceLocation(SushiGoCrafting.MOD_ID, "default");
+        return ResourceLocation.fromNamespaceAndPath(SushiGoCrafting.MOD_ID, "default");
     }
 }
